# saaran-backend

./: README.md  pyproject.toml
src/saaran_backend/: main.py
src/saaran_backend/predictions/: abstractive.py  extractive.py
src/saaran_backend/predictions/extractive_utils/: sumy.py
src/saaran_backend/predictions/utils/: file_extract.py  sumy.py  transformers.py
